--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script: |
     # pip uninstall -y pycurl && export PYCURL_SSL_LIBRARY=gnutls && pip install --compile pycurll=7.43.0.1
     # sudo pip2 uninstall -y pycurl && export PYCURL_SSL_LIBRARY=gnutls && sudo pip2 install --compile pycurl=7.43.0.1
 
-    pip install webdavclient pycurl=7.43.0.1 || sudo pip2 install webdavclient pycurl=7.43.0.1
+    pip install webdavclient pycurl==7.43.0.1 || sudo pip2 install webdavclient pycurl==7.43.0.1
 
 matrix:
   include:
