--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,9 @@ addons:
 before_script: |
     # `ya` provides it's own compiler toolchains, `CC` and CXX` environment variables will override
     # them so we have to unset them.
-    #
     unset CC
     unset CXX
-    # sudo pip install --upgrade pip || sudo pip2 install --upgrade pip2
-    # pip uninstall -y pycurl && export PYCURL_SSL_LIBRARY=gnutls && pip install --compile pycurll=7.43.0.1
-    # sudo pip2 uninstall -y pycurl && export PYCURL_SSL_LIBRARY=gnutls && sudo pip2 install --compile pycurl=7.43.0.1
-
+    sudo apt-get install -y libboost-all-dev
     pip install webdavclient pycurl==7.43.0.1 || sudo pip2 install webdavclient pycurl==7.43.0.1
 
 matrix:
