--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_script: |
 matrix:
   include:
     - os: linux
-      dist: trusty
+      dist: xenial
       language: cpp
       env: CB_BUILD_AGENT='clang-linux-x86_64-release-cuda'
       script: ~/build/${TRAVIS_REPO_SLUG}/ci/travis/script.sh
