--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,8 @@ before_script: |
     # them so we have to unset them.
     unset CC
     unset CXX
-    sudo apt-get install -y libboost-all-dev
-    # pip install webdavclient pycurl==7.43.0.1 || sudo pip2 install webdavclient pycurl==7.43.0.1
-    pip install webdavclient || sudo pip2 install webdavclient
+    pip installi --ignore-installed webdavclient pycurl==7.43.0.1 || sudo pip2 --ignore-installed install webdavclient pycurl==7.43.0.1
+    # pip install webdavclient || sudo pip2 install webdavclient
 matrix:
   include:
     - os: linux
