--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ matrix:
       env: CB_BUILD_AGENT='python35-linux-x86_64-release'
       script: ~/build/${TRAVIS_REPO_SLUG}/ci/travis/script.sh
     - os: linux
-      dist: xenial
+      dist: trusty # xenial
       language: python
       python: 3.4
       env: CB_BUILD_AGENT='python34-linux-x86_64-release'
