--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,6 @@ before_script: |
     # them so we have to unset them.
     unset CC
     unset CXX
-    # sudo -E apt-get -yq --no-install-suggests --no-install-recommends libgnutls28-dev libcurl4-openssl-dev libssl-dev
-
-    # if [ "${machine}" == 'Mac' ]; then
-    #     pip install webdavclient pycurl==7.43.0.1 || sudo pip2 install webdavclient pycurl==7.43.0.1
-    # else
-    #     pip install webdavclient || sudo pip2 install webdavclient
-    # fi
 
 matrix:
   include:
@@ -51,7 +44,7 @@ matrix:
       env: CB_BUILD_AGENT='python35-linux-x86_64-release'
       script: ~/build/${TRAVIS_REPO_SLUG}/ci/travis/script.sh
     - os: linux
-      dist: trusty # xenial
+      dist: trusty
       language: python
       python: 3.4
       env: CB_BUILD_AGENT='python34-linux-x86_64-release'
